<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">MiCalendari</string>
    <string name="location_optional">Location (optional)</string>
    <string name="duration_hours">Duration (hours)</string>
    <string name="delete">Delete</string>
    <string name="save_changes">Save Changes</string>
    <string name="test_location">Test Location</string>
    <string name="start_time">Start Time</string>
    <string name="short_name">Short Name</string>
    <string name="description">Description</string>
    <string name="date">Date</string>
    <string name="mark_task_complete">t</string>
</resources>
